override.css
/* ... */
form td table.tableStyle:first-of-type tr {
    /* display: grid !important; */
    grid-template-columns: 1fr 1fr 1fr !important;
    /* width: 33% !important; */
}

tr:has(>td.formLabel), tr:has(>td.noWrap) {/* outline: 3px solid green; */
  /* display: grid; */
  width: 100%;
  width: 927px;
  grid-template-columns: 1fr 1fr 1fr;
  /* height: 40px; */
  align-content: center;}

div#pageContent table:nth-of-type(2) tbody > tr > td[colspan="2"] > table[width] > tbody {
}

div#pageContent > div table:first-of-type form {
    /* outline: 2px solid rgba(0,0,255,0.3); */
}

tr:has(>td.formLabel) td, tr:has(>td.noWrap) td {
    height: 40px;
    /* align-content: baseline; */
    padding: 0 16px !important;
}

table.resultsPaginationContent table.tableStyle tbody tr.topAlign {
    /* outline: 10px solid pink; */
    table-layout: fixed;
    /* width: -webkit-fill-available; */
    display: table-row;
    white-space: nowrap;
}

table.resultsPaginationContent table.tableStyle tbody tr.topAlign th {
    left: 0 !important;
}

table.resultsPaginationContent table.tableStyle {
    margin-bottom: 0 !important;
}
table.resultsPaginationContent table.tableStyle td:last-of-type, table.resultsPaginationContent table.tableStyle th:last-of-type {
    border-right: none !important;
}

td:has(>#label_displayDate) {
    display: inline-grid;
    flex-direction: column;
}
td:has(>#label_displayDate) {
}
td[colspan] > table[width].tableStyle > tbody tr:has(>td) td:nth-of-type(2) {
    /* outline: 5px solid blue; */
    height: 96px;
    padding-bottom: 16px;
    display: flex;
    align-items: flex-end;
}

table.roundedResultsTable td.formlabel {
    width: 50%;
}

table.roundedResultsTable {}

table.roundedResultsTable > tbody > tr:has(td) {
    display: flex;
}

td.textAlignRight {
    justify-content: revert-layer;
}

.medRowHgt,
.smRowHgt,
.prelimRowHgt {
    height: auto !important;
}

.xlRowHgtAppReg {
    height: auto !important;
}

/* Root Question List */

#rootQuestionsTable {
  table-layout: auto !important;
}
.alternateQuestion img,
.requireQuestion img {
  filter: saturate(50%) hue-rotate(180deg);
}

.buttonContainerTop.left > * {
  display: inline-block !important;
}

#section1 table.borderCollapse th,
#section1 table.borderCollapse td {
 vertical-align: top !important;
 padding: 10px 16px !important;
 line-height: 1.25 !important;
 text-align: left !important;
}


#pageContent form[name="individualDemographicsList"] table.tableStyle th[aria-hidden="true"] {
 display: table-cell !important; 
 width: 40px !important;          
 padding: 0 !important;
}
#pageContent form[name="individualDemographicsList"] table.tableStyle tr > td:first-child {
 width: 40px !important;       
 padding: 0 !important;
}

#pageContent form[name="individualDemographicsList"] table.tableStyle
th.plainHeaderFormLabelInheritBackgroundDisplay[scope="row"] a.plainHeaderFormLabelForeground {
 display: inline-block !important;
 white-space: nowrap !important;
}

#pageContent form[name="individualDemographicsList"] table.tableStyle td.textAlignRight {
 white-space: nowrap !important;
 text-align: right !important;
 width: 1% !important;
}

#pageContent form[name="individualDemographicsList"] table.tableStyle {
 width: 100% !important;
 max-width: 100% !important;
 box-sizing: border-box !important;
 table-layout: auto !important;         
 display: table !important;              
}

#pageContent form[name="individualDemographicsList"] table.tableStyle th,
#pageContent form[name="individualDemographicsList"] table.tableStyle td {
 text-align: left !important;
 vertical-align: middle !important;
}

#pageContent form[name="individualDemographicsList"] table.tableStyle
th.plainHeaderFormLabelInheritBackgroundDisplay[scope="row"] {
 text-align: left !important;
 padding-left: 0 !important;         
}

#label_complete{
  display: contents;
}

#pageContent > div.skipLinkTarget > form > div.buttonContainer{
  display: block;
}


#pageContent > div.skipLinkTarget > form > table:nth-child(9) > tbody > tr:nth-child(2) > td.textAlignRight {
 display: flex !important;

}

